# spredd-markets-bot

./: .env.example  .gitignore  ALLIANCE_PROJECT_OVERVIEW.md  Dockerfile  LAUNCH_CAMPAIGN.md  LICENSE  NEW_PLATFORM_CHECKLIST.md  README.md  UsersjosepDownloadsspredd-markets-botopenapi.json  WHITEPAPER.md  alembic.ini  build.sh  events.json  honnold_event.json  market_response.json  nixpacks.toml  orderbook.json  poly_response.json  pyproject.toml  railway.toml  referralmarketing.md  requirements.txt  run_all.py  run_api.py  temp_detail.json  temp_events.json  temp_limitless.json  temp_limitless_full.json  temp_market.json
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_referral_system.py  003_fix_pin_protected_default.py  004_chain_specific_fees.py  005_add_export_pin_hash.py  006_delete_stale_position.py  007_add_partner_system.py  008_add_limitless_platform.py  009_fix_limitless_case.py  010_add_uppercase_limitless.py  011_add_uppercase_base_chain.py  012_add_user_country.py  013_add_order_market_title.py  014_add_marketing_columns.py  (+4 more)
api/: __init__.py  main.py  schemas.py
docs/: acp-job-offerings.json  acp-job-offerings.md
extension/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
mobile/: app.json  package-lock.json  package.json  tailwind.config.js
pwa/: Dockerfile  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
scripts/: acp_sandbox_test.py  delete_stale_position.py  migrate.py  setup.py
src/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_core.py  test_referral.py
webapp/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+241 files in other folders)
