[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spredd-markets-bot"
version = "1.0.0"
description = "Multi-platform prediction market Telegram bot supporting Kalshi, Polymarket, and Opinion Labs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Spredd Markets", email = "hello@spreddmarkets.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Telegram
    "python-telegram-bot[job-queue]>=21.0",
    
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Blockchain - Solana
    "solana>=0.34.0",
    "solders>=0.21.0",
    
    # Blockchain - EVM (Polygon, BSC)
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    
    # Platform SDKs
    "py-clob-client>=0.34.0",  # Polymarket
    "opinion-clob-sdk>=0.1.0",  # Opinion Labs
    "httpx>=0.27.0",  # For DFlow API calls
    
    # Crypto & Security
    "cryptography>=42.0.0",
    "pynacl>=1.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
spredd-bot = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
